--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 </div>
             </div>
             <div class="home__content--hero">
-                <img src="images/hero-home.png" alt="">
+                <img class="hero-d" src="images/hero-home.png" alt="">
+                <img class="hero-m" src="images/hero-m.png" alt="">
             </div>
             <div class="home__arow">
                 <img src="images/arrow-down.png" alt="">
@@ -197,7 +198,7 @@
                 </div>
             </div>
             <div class="hadiah__cta" data-aos="fade-up" data-aos-delay="800">
-                <a href="">
+                <a href="https://bit.ly/polricampuscreatorcompetition" target="_blank">
                     <button>DAFTAR SEKARANG!</button>
                 </a>
             </div>
@@ -280,7 +281,7 @@
                 <li data-aos="fade-up" data-aos-delay="800">Audio yang digunakan dalam video pun harus orisinal atau audio tanpa copyrights.</li>
                 <li data-aos="fade-up" data-aos-delay="900">Peserta diperbolehkan mengirim lebih dari 1 video dengan materi polisi humanis, aplikasi polri terkini, dan Indonesia Damai di ruang digital yang berbeda. Polisi humanis yang dimaksud dalam kompetisi ini adalah perwakilan polisi yang ada
                     di daerah sekitar tempat tinggal, kampus maupun lokasi terdekat yang bisa dijangkau, serta beberapa aplikasi digital yang dimiliki Polri dalam upaya menjaga keamanan masyarakat dan Indonesia.</li>
-                <li data-aos="fade-up" data-aos-delay="1000">Setelah mengunggah karya, peserta diwajibkan untuk melakukan konfirmasi pendaftaran di link https://bit.ly/polricampuscreatorcompetition </li>
+                <li data-aos="fade-up" data-aos-delay="1000">Setelah mengunggah karya, peserta diwajibkan untuk melakukan konfirmasi pendaftaran di link <a href="https://bit.ly/polricampuscreatorcompetition" target="_blank">https://bit.ly/polricampuscreatorcompetition </a></li>
                 <li data-aos="fade-up" data-aos-delay="1100">Pemenang akan dipilih berdasarkan kesesuaian dengan tema dan kreativitas.</li>
                 <li data-aos="fade-up" data-aos-delay="1200">Keputusan juri tidak dapat diganggu gugat dengan alasan apapun. Syarat dan ketentuan dapat berubah sewaktu-waktu tanpa pemberitahuan dan persetujuan peserta terlebih dahulu.</li>
                 <li data-aos="fade-up" data-aos-delay="1300">Pemenang akan terdiri dari Juara 1, 2, 3, juara favorit, dan 6 hadiah hiburan dengan total hadiah adalah sebesar Rp 50.000.000,- (Lima Puluh juta rupiah) dan sertifikat digital.</li>
@@ -291,7 +292,7 @@
                 <li data-aos="fade-up" data-aos-delay="1600">Informasi lebih lanjut dapat menghubungi email ke komunitas@tempo.co atau menghubungi no. Admin lomba 0821-1181-5007 pukul 09.00 - 21.00 wib</li>
             </ol>
             <div class="hadiah__cta" data-aos="fade-up" data-aos-delay="700">
-                <a href="">
+                <a href="https://bit.ly/polricampuscreatorcompetition" target="_blank">
                     <button>DAFTAR SEKARANG!</button>
                 </a>
             </div>
@@ -335,7 +336,7 @@
                 </div>
             </div>
             <div class="galleri__cta" data-aos="fade-up">
-                <a href="">
+                <a href="https://bit.ly/polricampuscreatorcompetition" target="_blank">
                     <button>SELENGKAPNYA</button>
                 </a>
             </div>
